# IntroToFunctionalProgramming

./: .gitignore  addThree.hs  addToSeven.hs  addTwo.hs  cat.hs  fakeApi.hs  lazy.hs  primes.hs  qsort.hs  stack.yaml
day4/: README.md  day4.cabal
day4/.stack-work/install/eb32346d/doc/day4-0.1.0.0/: LICENSE
day4/.stack-work/install/eb32346d/flag-cache/: HUnit-1.3.1.2-LggooYwT1UPHSoNYWvAdgk  QuickCheck-2.8.2-B7cXgOk7OAiKrNRsk2SfuA  ansi-terminal-0.6.2.3-DlzOk98pOsTIrg6vAjszFA  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  day4-0.1.0.0-7USI4MQsS1HFcbVwywqYLQ  day4-0.1.0.0-9ntlizTeuWN6ML38gqfDOk  hspec-2.2.4-9pUiTccnNmQTZyDub5D5c  hspec-core-2.2.4-9ACA2FaBPVx3apPeQTo5r3  hspec-discover-2.2.4-6OsWF6p1kycGNLQpxduJUs  hspec-expectations-0.7.2-2hcUzmYSxY99w7X9aRVhtQ  primitive-0.6.1.0-Ip44DqhfCp21tTUYbecwa  quickcheck-io-0.1.4-FBS8bJQDuy67pt2mrEjbcq  random-1.1-54KmMHXjttlERYcr1mvsAe  setenv-0.1.1.3-LcnHiP6T48k9K5OKepjQ1q  split-0.2.3.1-IJKK4pOCYGKud0jZImZke  stm-2.4.4.1-4z2NRWnB0NIIUvSJsHW0kF  tf-random-0.5-4z8OJUaXC1FRNfrLPFWAD
day4/.stack-work/install/eb32346d/lib/x86_64-windows-ghc-8.0.1/day4-0.1.0.0-9ntlizTeuWN6ML38gqfDOk/: Lib.hi
day4/.stack-work/install/eb32346d/pkgdb/: day4-0.1.0.0-7USI4MQsS1HFcbVwywqYLQ.conf  package.cache
day4/app/: Main.hs
day4/src/: Lib.hs
day4/test/: Spec.hs
